fixed the header title overlapping to parallax image for mobile

--- a/wp-content/themes/wecreate/resources/assets/src/sass/layouts/_home.scss
+++ b/wp-content/themes/wecreate/resources/assets/src/sass/layouts/_home.scss
@@ -143,6 +143,7 @@
         h1 {
             @media (max-width: 767px) {
                 margin-bottom: 15px;
+                padding: 0 50px 0 20px;
             }
         }
         p {
